format publish date on search results

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <p class="source">{{ .Source.Name }}</p>
                                 <time
                                     class="published-date"
-                                    >{{ .PublishedAt }}</time
+                                    >{{.FormatPublishedDate }}</time
                                 >
                             </div>
                         </div>
