--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
                     {{ if .Results }}
                     {{ if (gt .Results.TotalResults 0)}}
                     <p>
-                        About <strong>{{ .Results.TotalResults }}</strong> results were found.
+                        <strong>{{ .Results.TotalResults }}</strong> Total results
+                    </p>
+                    <p>
+                        Page <strong>{{ .CurrentPage }}</strong> of
+                        <strong> {{ .TotalPages }}</strong>
+                    </p>
+
                     </p>
                     {{ else if and (ne .Query "") (eq .Results.TotalResults 0) }}
                     <p>
