clean up front-end

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <a class="logo" href="/">News Demo</a>
+                <a class="logo" href="/">Go News App Demo</a>
                 <form action="/search" method="GET">
                     <input
                         autofocus
@@ -22,15 +22,17 @@
                         name="q"
                     />
                 </form>
-                <a
-                    href="https://github.com/andybyers21/go_news_app_demo"
-                    class="button github-button"
-                    >View on GitHub</a
-                >
+                <div class="btn">
+                    <a
+                        href="https://github.com/andybyers21/   go_news_app_demo"
+                        class="button github-button"
+                        >View on GitHub</a
+                    >
 
-                <a href="https://ajb.app" class="button github-button"
-                    >View my Portfolio</a
-                >
+                    <a href="https://ajb.app" class="button     github-button"
+                        >View my Portfolio</a
+                    >
+                </div>
             </header>
 
             <section class="container">
@@ -98,6 +100,14 @@
                     {{ end }}
                 </div>
             </section>
+            <footer>
+                <h4>
+                    Made by Andy Byers, using Go.
+                </h4>
+                <h4>
+                    <a href="http://ajb.app">ajb.app</a>
+                </h4>
+            </footer>
         </main>
     </body>
 </html>
