add search button

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
                         type="search"
                         name="q"
                     />
+                      <button type="submit" class="search-button">Search</button>
                 </form>
                 <div class="btn">
                     <a
-                        href="https://github.com/andybyers21/   go_news_app_demo"
+                        href="https://github.com/andybyers21/go_news_app_demo"
                         class="button github-button"
                         >View on GitHub</a
                     >
 
-                    <a href="https://ajb.app" class="button     github-button"
+                    <a href="https://ajb.app" class="button github-button"
                         >View my Portfolio</a
                     >
                 </div>
